# sleeper-ff-master

./: .gitignore  README.md  pyproject.toml
data/: sample_redraft.csv
src/sleeper_assistant/: __init__.py  bannerfont.py  config.py  engine.py  matching.py  rankings.py  roster.py  sleeper.py  state.py  ui.py
src/sleeper_assistant/cli/: __init__.py  common.py  draft.py  menu.py  root.py  start.py  waiver.py
tests/: conftest.py  test_bug_fixes.py  test_menu.py  test_pipeline.py
