[project]
name = "sleeper-assistant"
version = "0.1.0"
description = "Sleeper fantasy-football assistant — draft, waiver, and start/sit tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
    "rapidfuzz>=3.6",
    "typer>=0.12",
]

[project.scripts]
sleeper = "sleeper_assistant.cli.root:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
